# chat-server/src/main/java/cz/muni/chat/server/service/ChatServiceImpl.java
@@ -3,6 +3,7 @@ package cz.muni.chat.server.service;
 import jakarta.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.ZonedDateTime;
